<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_decision">

    <GridLayout
        android:id="@+id/idGrid2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/idCardFirebase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieInteractuar"
                    android:layout_width="match_parent"
                    android:layout_height="105dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/chatting_animation" />

                <TextView
                    android:id="@+id/idtvinteractua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/valdescripcion1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.477"
                    app:layout_constraintStart_toEndOf="@+id/lottieInteractuar"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/idbtnloginfirebase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/valbtnIr"
                    app:icon="@drawable/ic_baseline_arrow_right_alt_24"
                    app:iconGravity="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.474"
                    app:layout_constraintStart_toEndOf="@+id/lottieInteractuar"
                    app:layout_constraintTop_toBottomOf="@+id/idtvinteractua" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/idCardMysql"
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="60dp"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="276dp"
                android:layout_height="270dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="center"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieOperaInfo"
                    android:layout_width="match_parent"
                    android:layout_height="105dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/gathering_information" />

                <TextView
                    android:id="@+id/idtvoperainfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/valdescripcion2"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.477"
                    app:layout_constraintStart_toEndOf="@+id/lottieOperaInfo"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/idbtnloginmysql"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/valbtnIr"
                    app:icon="@drawable/ic_baseline_arrow_right_alt_24"
                    app:iconGravity="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.474"
                    app:layout_constraintStart_toEndOf="@+id/lottieOperaInfo"
                    app:layout_constraintTop_toBottomOf="@+id/idtvoperainfo" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </GridLayout>




</RelativeLayout>