<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".fragmentos.ReservarZonasComunesFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/btnhora"
            android:textSize="14sp"
            android:textStyle="bold"
            app:icon="@drawable/ic_baseline_access_time_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fecha" />

        <Button
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="26dp"
            android:text="@string/btnfecha"
            android:textSize="14sp"
            android:textStyle="bold"
            app:icon="@drawable/ic_baseline_date_range_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <EditText
            android:id="@+id/nombres"
            android:layout_width="408dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Ingrese sus nombres"
            android:inputType="text"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/apellidos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Ingrese sus apellidos"
            android:inputType="text"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombres" />

        <EditText
            android:id="@+id/celular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Ingrese número de celular"
            android:inputType="number"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/apellidos" />

        <EditText
            android:id="@+id/efecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:ems="10"
            android:hint="dd/mm/aaaa"
            android:inputType="date"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cajatexto" />

        <EditText
            android:id="@+id/ehora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:ems="10"
            android:hint="hh:mm"
            android:inputType="time"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/efecha" />

        <EditText
            android:id="@+id/cajatexto"
            android:layout_width="400dp"
            android:layout_height="123dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Motivo de reserva"
            android:inputType="textPersonName"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/celular" />

        <Button
            android:id="@+id/btnreservar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/valreservar"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ehora" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="400dp"
            android:layout_height="49dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cajatexto">

            <RadioButton
                android:id="@+id/idSalonJuegos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Salón de juegos"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/idAuditorio"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="Auditorio"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/idGimnasio"
                android:layout_width="131dp"
                android:layout_height="50dp"
                android:text="Gimnasio"
                android:textColor="#000000" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>